package com.example.arcadia;


import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.*;
import static androidx.test.espresso.matcher.ViewMatchers.*;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class SuperTacToeWinTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void superTacToeWinTest() {
        ViewInteraction appCompatButton = onView(
allOf(withId(R.id.libraryButton), withText("Library"),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
1),
isDisplayed()));
        appCompatButton.perform(click());
        
        ViewInteraction appCompatButton2 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton2.perform(click());
        
        ViewInteraction appCompatButton3 = onView(
allOf(withId(R.id.button1), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
10),
isDisplayed()));
        appCompatButton3.perform(click());
        
        ViewInteraction appCompatButton4 = onView(
allOf(withId(R.id.button2), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
11),
isDisplayed()));
        appCompatButton4.perform(click());
        
        ViewInteraction appCompatButton5 = onView(
allOf(withId(R.id.button7), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
16),
isDisplayed()));
        appCompatButton5.perform(click());
        
        ViewInteraction appCompatButton6 = onView(
allOf(withId(R.id.button3), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
12),
isDisplayed()));
        appCompatButton6.perform(click());
        
        ViewInteraction appCompatButton7 = onView(
allOf(withId(R.id.button6), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
15),
isDisplayed()));
        appCompatButton7.perform(click());
        
        ViewInteraction appCompatButton8 = onView(
allOf(withId(R.id.button12), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
21),
isDisplayed()));
        appCompatButton8.perform(click());
        
        ViewInteraction appCompatButton9 = onView(
allOf(withId(R.id.button8), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
17),
isDisplayed()));
        appCompatButton9.perform(click());
        
        ViewInteraction appCompatButton10 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton10.perform(click());
        
        ViewInteraction appCompatButton11 = onView(
allOf(withId(R.id.button11), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
20),
isDisplayed()));
        appCompatButton11.perform(click());
        
        ViewInteraction appCompatButton12 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton12.perform(click());
        
        ViewInteraction appCompatButton13 = onView(
allOf(withId(R.id.button25), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
34),
isDisplayed()));
        appCompatButton13.perform(click());
        
        ViewInteraction appCompatButton14 = onView(
allOf(withId(R.id.button19), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
28),
isDisplayed()));
        appCompatButton14.perform(click());
        
        ViewInteraction appCompatButton15 = onView(
allOf(withId(R.id.button18), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
27),
isDisplayed()));
        appCompatButton15.perform(click());
        
        ViewInteraction appCompatButton16 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
23),
isDisplayed()));
        appCompatButton16.perform(click());
        
        ViewInteraction appCompatButton17 = onView(
allOf(withId(R.id.button20), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
29),
isDisplayed()));
        appCompatButton17.perform(click());
        
        ViewInteraction appCompatButton18 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton18.perform(click());
        
        ViewInteraction appCompatButton19 = onView(
allOf(withId(R.id.button8), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
17),
isDisplayed()));
        appCompatButton19.perform(click());
        
        ViewInteraction appCompatButton20 = onView(
allOf(withId(R.id.button9), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
18),
isDisplayed()));
        appCompatButton20.perform(click());
        
        ViewInteraction appCompatButton21 = onView(
allOf(withId(R.id.button15), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
24),
isDisplayed()));
        appCompatButton21.perform(click());
        
        ViewInteraction appCompatButton22 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton22.perform(click());
        
        ViewInteraction appCompatButton23 = onView(
allOf(withId(R.id.button21), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
30),
isDisplayed()));
        appCompatButton23.perform(click());
        
        ViewInteraction appCompatButton24 = onView(
allOf(withId(R.id.button16), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
25),
isDisplayed()));
        appCompatButton24.perform(click());
        
        ViewInteraction appCompatButton25 = onView(
allOf(withId(R.id.button17), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
26),
isDisplayed()));
        appCompatButton25.perform(click());
        
        ViewInteraction appCompatButton26 = onView(
allOf(withId(R.id.button18), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
27),
isDisplayed()));
        appCompatButton26.perform(click());
        
        ViewInteraction appCompatButton27 = onView(
allOf(withId(R.id.button22), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
31),
isDisplayed()));
        appCompatButton27.perform(click());
        
        ViewInteraction appCompatButton28 = onView(
allOf(withId(R.id.button11), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
20),
isDisplayed()));
        appCompatButton28.perform(click());
        
        ViewInteraction appCompatButton29 = onView(
allOf(withId(R.id.button12), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
21),
isDisplayed()));
        appCompatButton29.perform(click());
        
        ViewInteraction appCompatButton30 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton30.perform(click());
        
        ViewInteraction appCompatButton31 = onView(
allOf(withId(R.id.button23), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
32),
isDisplayed()));
        appCompatButton31.perform(click());
        
        ViewInteraction appCompatButton32 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton32.perform(click());
        
        ViewInteraction appCompatButton33 = onView(
allOf(withId(R.id.button5), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
14),
isDisplayed()));
        appCompatButton33.perform(click());
        
        ViewInteraction appCompatButton34 = onView(
allOf(withId(R.id.button9), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
18),
isDisplayed()));
        appCompatButton34.perform(click());
        
        ViewInteraction appCompatButton35 = onView(
allOf(withId(R.id.button8), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
17),
isDisplayed()));
        appCompatButton35.perform(click());
        
        ViewInteraction appCompatButton36 = onView(
allOf(withId(R.id.button10), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
19),
isDisplayed()));
        appCompatButton36.perform(click());
        
        ViewInteraction appCompatButton37 = onView(
allOf(withId(R.id.button4), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
13),
isDisplayed()));
        appCompatButton37.perform(click());
        
        ViewInteraction appCompatButton38 = onView(
allOf(withId(R.id.button15), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
24),
isDisplayed()));
        appCompatButton38.perform(click());
        
        ViewInteraction appCompatButton39 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
23),
isDisplayed()));
        appCompatButton39.perform(click());
        
        ViewInteraction appCompatButton40 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton40.perform(click());
        
        ViewInteraction appCompatButton41 = onView(
allOf(withId(R.id.button3), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
12),
isDisplayed()));
        appCompatButton41.perform(click());
        
        ViewInteraction appCompatButton42 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton42.perform(click());
        
        ViewInteraction appCompatButton43 = onView(
allOf(withId(R.id.button23), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
32),
isDisplayed()));
        appCompatButton43.perform(click());
        
        ViewInteraction appCompatButton44 = onView(
allOf(withId(R.id.button21), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
30),
isDisplayed()));
        appCompatButton44.perform(click());
        
        ViewInteraction appCompatButton45 = onView(
allOf(withId(R.id.button16), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
25),
isDisplayed()));
        appCompatButton45.perform(click());
        
        ViewInteraction appCompatButton46 = onView(
allOf(withId(R.id.button11), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
20),
isDisplayed()));
        appCompatButton46.perform(click());
        
        ViewInteraction appCompatButton47 = onView(
allOf(withId(R.id.button18), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
27),
isDisplayed()));
        appCompatButton47.perform(click());
        
        ViewInteraction appCompatButton48 = onView(
allOf(withId(R.id.button22), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
31),
isDisplayed()));
        appCompatButton48.perform(click());
        
        ViewInteraction appCompatButton49 = onView(
allOf(withId(R.id.button17), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
26),
isDisplayed()));
        appCompatButton49.perform(click());
        
        ViewInteraction appCompatButton50 = onView(
allOf(withId(R.id.button12), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
21),
isDisplayed()));
        appCompatButton50.perform(click());
        
        ViewInteraction appCompatButton51 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton51.perform(click());
        
        ViewInteraction appCompatButton52 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton52.perform(click());
        
        ViewInteraction appCompatButton53 = onView(
allOf(withId(R.id.button1), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
10),
isDisplayed()));
        appCompatButton53.perform(click());
        
        ViewInteraction appCompatButton54 = onView(
allOf(withId(R.id.button6), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
15),
isDisplayed()));
        appCompatButton54.perform(click());
        
        ViewInteraction appCompatButton55 = onView(
allOf(withId(R.id.button11), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
20),
isDisplayed()));
        appCompatButton55.perform(click());
        
        ViewInteraction appCompatButton56 = onView(
allOf(withId(R.id.button16), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
25),
isDisplayed()));
        appCompatButton56.perform(click());
        
        ViewInteraction appCompatButton57 = onView(
allOf(withId(R.id.button7), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
16),
isDisplayed()));
        appCompatButton57.perform(click());
        
        ViewInteraction appCompatButton58 = onView(
allOf(withId(R.id.button12), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
21),
isDisplayed()));
        appCompatButton58.perform(click());
        
        ViewInteraction appCompatButton59 = onView(
allOf(withId(R.id.button17), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
26),
isDisplayed()));
        appCompatButton59.perform(click());
        
        ViewInteraction appCompatButton60 = onView(
allOf(withId(R.id.button22), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
31),
isDisplayed()));
        appCompatButton60.perform(click());
        
        ViewInteraction appCompatButton61 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton61.perform(click());
        
        ViewInteraction appCompatButton62 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton62.perform(click());
        
        ViewInteraction appCompatButton63 = onView(
allOf(withId(R.id.button15), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
24),
isDisplayed()));
        appCompatButton63.perform(click());
        
        ViewInteraction appCompatButton64 = onView(
allOf(withId(R.id.button19), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
28),
isDisplayed()));
        appCompatButton64.perform(click());
        
        ViewInteraction appCompatButton65 = onView(
allOf(withId(R.id.button18), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
27),
isDisplayed()));
        appCompatButton65.perform(click());
        
        ViewInteraction appCompatButton66 = onView(
allOf(withId(R.id.button17), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
26),
isDisplayed()));
        appCompatButton66.perform(click());
        
        ViewInteraction appCompatButton67 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
23),
isDisplayed()));
        appCompatButton67.perform(click());
        
        ViewInteraction appCompatButton68 = onView(
allOf(withId(R.id.button9), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
18),
isDisplayed()));
        appCompatButton68.perform(click());
        
        ViewInteraction appCompatButton69 = onView(
allOf(withId(R.id.button8), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
17),
isDisplayed()));
        appCompatButton69.perform(click());
        
        ViewInteraction appCompatButton70 = onView(
allOf(withId(R.id.button7), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
16),
isDisplayed()));
        appCompatButton70.perform(click());
        
        ViewInteraction appCompatButton71 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton71.perform(click());
        
        ViewInteraction appCompatButton72 = onView(
allOf(withId(R.id.button2), withText("Super Tic Tac Toe"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
1),
isDisplayed()));
        appCompatButton72.perform(click());
        
        ViewInteraction appCompatButton73 = onView(
allOf(withId(R.id.button5), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
14),
isDisplayed()));
        appCompatButton73.perform(click());
        
        ViewInteraction appCompatButton74 = onView(
allOf(withId(R.id.button15), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
24),
isDisplayed()));
        appCompatButton74.perform(click());
        
        ViewInteraction appCompatButton75 = onView(
allOf(withId(R.id.button20), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
29),
isDisplayed()));
        appCompatButton75.perform(click());
        
        ViewInteraction appCompatButton76 = onView(
allOf(withId(R.id.button25), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
34),
isDisplayed()));
        appCompatButton76.perform(click());
        
        ViewInteraction appCompatButton77 = onView(
allOf(withId(R.id.button9), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
18),
isDisplayed()));
        appCompatButton77.perform(click());
        
        ViewInteraction appCompatButton78 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
23),
isDisplayed()));
        appCompatButton78.perform(click());
        
        ViewInteraction appCompatButton79 = onView(
allOf(withId(R.id.button19), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
28),
isDisplayed()));
        appCompatButton79.perform(click());
        
        ViewInteraction appCompatButton80 = onView(
allOf(withId(R.id.button24), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
33),
isDisplayed()));
        appCompatButton80.perform(click());
        
        ViewInteraction appCompatButton81 = onView(
allOf(withId(R.id.button13), withText("Button"),
childAtPosition(
allOf(withId(R.id.linearLayout),
childAtPosition(
withId(android.R.id.content),
0)),
22),
isDisplayed()));
        appCompatButton81.perform(click());
        }
    
    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
